samples/_failures_safe/1761454576_86a639_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_97614f4d.c: In function ‘main’:
./samples/SAFE/__tmp_97614f4d.c:168:5: error: expected expression at end of input
  168 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_97614f4d.c:168:5: error: expected declaration or statement at end of input
